--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -5,17 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to your shopping cart</title>
 </head>
+<style>
+    .center-it {
+        display: flex;
+        justify-content: center;
+    }
+</style>
 <body>
-    <h2><span data-th-text="${name}"></span>'s Shopping Cart</h2>
+    <h2><span data-th-text="${displayName}"></span>'s Shopping Cart</h2>
 
-    <table>
+    <table class="center-it">
         <tr>
             <td>
-                <h3>Contents</h3>
-
+                <div>
+                    <h3>Contents</h3>
+                    <div data-th-if="${!empty}">
+                        <div data-th-each="c : ${cart}">
+                            <span data-th-text="${c}"></span>
+                        </div>
+                    </div>
+                    <div data-th-if="${empty}">
+                        <h4>Your cart is empty</h4>
+                    </div>
+                </div>
             </td>
             <td>
                 <form action="/cart" method="POST">
+                    <input type="hidden" name="name" data-th-value="${name}">
+                    <input type="hidden" name="contents" data-th-value="${contents}">
                     <label for="item">Item to add:</label>
                     <input type="text" name="item" placeholder="Item to hold" required>
                     <input type="submit" value="ADD TO CART">
